...
                            <constraint firstItem="7gZ-3I-C86" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cRr-iZ-UCi"/>
                            <constraint firstAttribute="bottom" secondItem="7gZ-3I-C86" secondAttribute="bottom" id="kTq-Eu-i26"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7gZ-3I-C86" secondAttribute="trailing" id="o2L-s6-83v"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7YX-ug-AZK" secondAttribute="trailing" id="zCd-Eo-8tI"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Discover" id="yaE-XS-6fz" userLabel="Navigation Item"/>
                    <connections>
                        <outlet property="activityIndicator" destination="NqR-N5-kDt" id="lsE-MU-9LU"/>
                        <outlet property="collectionView" destination="7gZ-3I-C86" id="h7T-w3-aUd"/>
                        <outlet property="messageView" destination="7YX-ug-AZK" id="5yr-xI-SVY"/>
                    </connections>
                </viewController>
...
