...
                    <view key="view" contentMode="scaleToFill" id="sWZ-u3-qWu">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="cee-Xl-vC9"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="About" image="Info" id="iej-dg-sQD"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bon-un-qwm" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1260" y="478"/>
        </scene>
        <!--Tab Bar Controller-->
...
